# jake_slides

./: .gitignore  .nojekyll  AD_adjoints_composition_first.ipynb  AD_and_adjoints_concepts.html  AD_and_adjoints_concepts.ipynb  README.md  UDE_glaciology_lecture.html  UDE_glaciology_lecture.ipynb  _quarto.yml  build_concepts_notebook.py.archived  build_deepdive_notebook.py  build_notebook.py.archived  gaussian_processes.html  gaussian_processes.ipynb  index.html  index.qmd  numerical_deep_dive.ipynb  prototype.py  pyproject.toml  robots.txt  search.json  sitemap.xml
_quarto_poc/: AD_adjoints_composition_first.html  UDE_glaciology_lecture.html  gaussian_processes.html  search.json
_quarto_poc/AD_adjoints_composition_first_files/libs/bootstrap/: bootstrap-19cd76cafef3e9867d80f2c8ca64aaba.min.css
_quarto_poc/site_libs/bootstrap/: bootstrap-3dfdabff9cb45623dc2121e8c2e89e68.min.css
site_libs/bootstrap/: bootstrap-56e7888e0fc86da5d108f04756f756fd.min.css  bootstrap-a479c8b8796c02a92746b901ed0ee40b.min.css  bootstrap-d90d3ffaf5042f4372420b59a33bd6a1.min.css
