[project]
name = "ude-lecture"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.7.2",
    "equinox>=0.13.8",
    "ipykernel>=7.3.0",
    "jax>=0.10.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "optax>=0.2.8",
    "scikit-learn>=1.9.0",
    "sympy>=1.14.0",
]
